@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}


class Organization {
  -String nome
  -String email
  -String nif
}

class Collaborator{
  -String nome
  -String email
}

class Task {
  -String idT
  -String description
  -Time timeDuration
  -double costHour
  -String taskCategory
}


class User {
}



Platform "1" -- "1..*" Organization: has registered >




Organization "1" -- "1" Collaborator: has >
Collaborator "1" -- "1" User: acts as >

Administrator "1" -- "1" Organization: registers >

Administrator "1" -- "1" Collaborator: registers >

Platform "1" -- "1..*" Task: has registered >




Platform "1" -- "1" Administrator: has >
Collaborator "1" -- "1..*" Task: creates >




@enduml

